# drf-project

./: .gitignore  fake_data.py  main.py  makefile  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt  tailwind.config.js  vite.config.js
accounts/: views.py
assets/: main.js
core/: middleware.py  models.py
core/migrations/: 0001_initial.py
core/vite_assets/: main.css
core/vite_assets_dist/.vite/: manifest.json
core/vite_assets_dist/assets/: css-_NIALcr0.css  home-Bwo6wEKJ.js
decide/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ideas/: models.py  serializers.py  urls.py  views.py
ideas/migrations/: 0001_initial.py  0002_alter_idea_content_alter_idea_dimensions_and_more.py  0002_idea_properties.py  0003_idea_formula_idea_priority_idea_votes_count.py  0004_alter_idea_formula.py  0005_remove_idea_properties.py  0006_ideaproperty.py  0007_alter_ideaproperty_unique_together_idea_properties_and_more.py  0008_alter_ideaproperty_options_and_more.py  0009_remove_idea_properties_idea_dimensions_and_more.py  0010_alter_idea_dimensions_alter_idea_formula.py
static/src/: main.css  main.js
templates/: base.html  create_idea.html  create_workspace.html  home.html  ideas_create.html  ideas_list.html  list_ideas.html
templates/components/: pageHeader.html
workspaces/: models.py  serializers.py  urls.py  views.py
workspaces/migrations/: 0001_initial.py  0002_alter_workspace_name.py  0003_workspace_members_alter_workspace_owner.py  0004_alter_workspace_members_alter_workspace_owner.py
(+1 files in other folders)
