[tool.poetry]
name = "decide"
version = "0.1.0"
description = ""
authors = ["Mathieu <contact@mathieubellon.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
supabase = "^2.4.1"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
